export default interface EnergiaBase {
    calcularEnergiaNeta(temperatura: number): number;
}